@@ -222,6 +222,4 @@ typedef struct boot_args_pre_lion
 
 } boot_args_pre_lion;
 
-extern char gMacOSVersion[8];
-
 #endif /* _PEXPERT_I386_BOOT_H */
